--- a/package.json
+++ b/package.json
@@ -11,14 +11,17 @@
   "dependencies": {
     "@hookform/resolvers": "^2.9.10",
     "axios": "^1.1.2",
+    "js-cookie": "^3.0.1",
     "jsonwebtoken": "^8.5.1",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.38.0",
+    "react-toastify": "^9.0.8",
     "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.2",
     "@types/jsonwebtoken": "^8.5.9",
     "@types/node": "18.8.5",
     "@types/react": "18.0.21",
