--- a/package.json
+++ b/package.json
@@ -10,14 +10,18 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^2.9.10",
+    "@reduxjs/toolkit": "^1.9.0",
     "axios": "^1.1.2",
     "js-cookie": "^3.0.1",
     "jsonwebtoken": "^8.5.1",
     "next": "12.3.1",
+    "next-redux-wrapper": "^8.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.38.0",
+    "react-redux": "^8.0.5",
     "react-toastify": "^9.0.8",
+    "redux": "^4.2.0",
     "yup": "^0.32.11"
   },
   "devDependencies": {
