--- a/package.json
+++ b/package.json
@@ -10,21 +10,19 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^2.9.10",
-    "@reduxjs/toolkit": "^1.9.0",
     "axios": "^1.1.2",
     "js-cookie": "^3.0.1",
     "jsonwebtoken": "^8.5.1",
     "next": "12.3.1",
-    "next-redux-wrapper": "^8.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.38.0",
-    "react-redux": "^8.0.5",
+    "react-icons": "^4.6.0",
     "react-toastify": "^9.0.8",
-    "redux": "^4.2.0",
     "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@tailwindcss/line-clamp": "^0.4.2",
     "@types/js-cookie": "^3.0.2",
     "@types/jsonwebtoken": "^8.5.9",
     "@types/node": "18.8.5",
@@ -34,6 +32,7 @@
     "clsx": "^1.2.1",
     "eslint": "8.25.0",
     "eslint-config-next": "12.3.1",
+    "lodash": "^4.17.21",
     "postcss": "^8.4.18",
     "tailwindcss": "^3.1.8",
     "typescript": "4.8.4"
