--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "clean": "rimraf .next"
   },
   "dependencies": {
     "@hookform/resolvers": "^2.9.10",
+    "@tanstack/react-query": "^4.18.0",
     "axios": "^1.1.2",
     "js-cookie": "^3.0.1",
     "jsonwebtoken": "^8.5.1",
@@ -19,6 +21,7 @@
     "react-hook-form": "^7.38.0",
     "react-icons": "^4.6.0",
     "react-toastify": "^9.0.8",
+    "rimraf": "^3.0.2",
     "yup": "^0.32.11"
   },
   "devDependencies": {
